@@ -24,6 +24,7 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -36,10 +37,9 @@ import java.util.concurrent.ConcurrentHashMap;
 @Log4j
 public class TelegramBot extends TelegramLongPollingBot {
     private final Map<Long, String> bindingBy = new ConcurrentHashMap<>();
-    private String greeting = "Привет! Что умеет этот бот";
-    private ArrayList<String> textCreatePost = new ArrayList<>();
+    private final ArrayList<String> textCreatePost = new ArrayList<>();
     @Autowired
-    private InputData inputData;
+    private final InputData inputData;
 
     @Value("${bot.token}")
     String token;
@@ -57,10 +57,7 @@ public class TelegramBot extends TelegramLongPollingBot {
 
     @Override
     public void onUpdateReceived(Update update) {
-        long chatId = 0;
-        if (update.hasMessage()){
-            //chatId = update.getMessage().getChatId();
-        }
+        long chatId;
         ArrayList<String> list = new ArrayList<>();
         list.add("/start - Команды бота");
         list.add( "/echo - Ввод данных для command");
@@ -101,34 +98,24 @@ public class TelegramBot extends TelegramLongPollingBot {
                     send(msg);
                 }
             } else if (bindingBy.containsKey(chatId)) {
-                BotApiMethod msg = null;
+                BotApiMethod msg = new SendMessage();
                 try {
                     msg = map.get(bindingBy.get(chatId)).callback(update);
                 } catch (MalformedURLException | URISyntaxException e) {
-                    throw new RuntimeException(e);
+                    log.debug(e);
                 }
-                //List<PhotoSize> photo = new ArrayList<>();
-                String photo = null;
                 if (update.getMessage().hasPhoto()){
                     GetFile getFile = new GetFile();
                     int el = update.getMessage().getPhoto().size()-1;
                     getFile.setFileId(update.getMessage().getPhoto().get(el).getFileId());
-                    log.debug(update.getMessage().getPhoto().size());
                     try {
                         File file = execute(getFile);
-                        //file.setFileSize(3000L);
-                        log.debug(file.getFileSize());
-                        URL url = new URL("https://api.telegram.org/file/bot" + token + "/" + file.getFilePath());
-                        BufferedImage img = ImageIO.read(url);
-                        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-                        ImageIO.write(img, "jpg", baos);
-                        sendPhotoMethod(chatId, "https://api.telegram.org/file/bot" + token + "/" + file.getFilePath(), "Received photo:");
+                        URL url = new URI("https://api.telegram.org/file/bot" + token + "/" + file.getFilePath()).toURL();
                         textCreatePost.add(String.valueOf(url));
                         log.debug(url);
-                    } catch (TelegramApiException | IOException e) {
+                    } catch (TelegramApiException | IOException | URISyntaxException e) {
                         log.debug(e);
                     }
-
                 } else {
                     textCreatePost.add(update.getMessage().getText());
                 }
@@ -164,7 +151,7 @@ public class TelegramBot extends TelegramLongPollingBot {
                 }
             } else if (bindingBy.containsKey(chatId)) {
                 log.debug(bindingBy);
-                BotApiMethod msg = null;
+                BotApiMethod msg;
                 try {
                     msg = map.get(bindingBy.get(chatId)).callback(update);
                 } catch (MalformedURLException | URISyntaxException e) {
@@ -207,21 +194,4 @@ public class TelegramBot extends TelegramLongPollingBot {
             log.debug(e);
         }
     }
-    public void sendPhotoMethod(Long chatId, String photoUrl, String caption) {
-        try {
-            URL url = new URL(photoUrl);
-            log.debug(url);
-            BufferedImage img = ImageIO.read(url);
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            ImageIO.write(img, "jpg", baos);
-            SendPhoto sendPhoto = new SendPhoto();
-            sendPhoto.setChatId(chatId);
-            sendPhoto.setPhoto(new InputFile(new ByteArrayInputStream(baos.toByteArray()), "photo.jpg"));
-            sendPhoto.setCaption(caption);
-            execute(sendPhoto);
-        } catch (IOException | TelegramApiException e) {
-            e.printStackTrace();
-        }
-    }
-
 }
